--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,9 @@
   </head>
 
   <body>
+    <%= render "layouts/navbar" %>
     <%= render "layouts/messages" %>
     <%= yield %>
+    <%= render "layouts/footer" %>
   </body>
 </html>
