--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,15 @@
-<h1>Pagina de Inicio</h1>
-
-<%= link_to 'About page', pages_about_path %>
+<div class="mdl-grid">
+    <div class="mdl-cell mdl-cell--8-col mdl-cell--2-offset">
+        <div class="mdl-card mdl-shadow--2dp card-home">
+            <div class="mdl-card__title">
+                <h2 class="mdl-card__title-text">Welcome to my Blog App.</h2>
+            </div>
+            <div class="mdl-card__supporting-text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem, vel similique cum tempora voluptatem repellendus totam exercitationem saepe ullam ad.
+            </div>
+            <div class="mdl-card__actions mdl-card--border">
+                <%= link_to "Articles", articles_path, class: "mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect"%>
+            </div>
+        </div>
+    </div>
+</div>
