--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,4 +1,9 @@
-<h1>Edit an article</h1>
+<div class="mdl-grid">
+    <div class="mdl-cell mdl-cell--4-col mdl-cell--4-offset">
+        <div class="page-title">
+            <h3>Edit an article</h3>
+        </div>
+    </div>
+</div>
 
-<%= render 'form' %>
-<p><%= link_to "Back to the article", article_path(@article) %></p>
+<%= render 'form', enable_back_button: true%>
