--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,3 +1,9 @@
-<h1>Create an article</h1>
+<div class="mdl-grid">
+    <div class="mdl-cell mdl-cell--4-col mdl-cell--4-offset">
+        <div class="page-title">
+            <h3>Create an Article</h3>
+        </div>
+    </div>
+</div>
 
-<%= render 'form' %>
+<%= render 'form', enable_back_button: false %>
