--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,24 +1,24 @@
-<% if @article.errors.any? %>
-    <h5>The following errors prevented the article from getting created</h5>
-    <ul>
-        <% @article.errors.full_messages.each do |message| %>
-            <li><%= message %> <br/></li>
+<%= render "shared/errors", article: @article %>
+<div class="mdl-grid">
+    <div class="mdl-cell mdl-cell--4-col mdl-cell--4-offset">
+        <%= form_for @article, html: { class: "mdl-card mdl-shadow--2dp card-form" } do |f|%>
+            <div class="mdl-card__supporting-text">
+                <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                    <%= f.label :title, class: "mdl-textfield__label" %>
+                    <%= f.text_field :title, class: "mdl-textfield__input" %>
+                </div>
+                <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                    <%= f.label :description, class: "mdl-textfield__label" %>
+                    <%= f.text_area :description, class: "mdl-textfield__input" %>
+                </div>
+            </div>
+            <div class="mdl-card__actions mdl-card--border">
+                <%= f.submit "Create", class: "mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" %>
+                <%= link_to "Back to the list", articles_path, class: "mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" %>
+                <% if enable_back_button %>
+                    <%= link_to "Back to article", article_path(@article), class: "mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" %>
+                <% end %>
+            </div>
         <% end %>
-    </ul>
-<% end %>
-
-<%= form_for @article do |f| %>
-
-    <p>
-        <%= f.label :title %> <br/>
-        <%= f.text_field :title %>
-    </p>
-    <p>
-        <%= f.label :description %> <br/>
-        <%= f.text_area :description %>
-    </p>
-    <p>
-        <%= f.submit %>
-    </p>
-
-<% end %>
+    </div>
+</div>
