--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,11 +1,29 @@
-<h1>Article <%= @article.id %> - Create at <%= @article.created_at %></h1>
-
-<p>
-    Title:<%= @article.title %>
-</p>
-<p>
-    Description: <%= @article.description %>
-</p>
-
-<%= link_to "Edit article", edit_article_path %>
-<%= link_to "Back to the list", articles_path %>
+<div class="mdl-grid">
+    <div class="mdl-cell mdl-cell--4-col mdl-cell--4-offset">
+        <div class="page-title">
+            <h3>Title: <%= @article.title %></h3>
+            <p>Create at <%= @article.created_at.strftime("%b %d, %Y") %></p>
+        </div>
+    </div>
+</div>
+<div class="mdl-grid">
+    <div class="mdl-cell mdl-cell--4-col mdl-cell--4-offset">
+        <div class="card text-xs-center">
+            <div class="card-block">
+                <h4 class="card-title">Description:</h4>
+                <p class="card-text"><%= @article.description %></p>
+            </div>
+            <div class="card-block">
+                <%= link_to "Edit article", edit_article_path, class: "mdl-button mdl-js-button mdl-button--raised mdl-button--colored mdl-js-ripple-effect" %>
+                <%= link_to "Back to the list", articles_path, class: "mdl-button mdl-js-button mdl-button--raised mdl-button--accent mdl-js-ripple-effect" %>
+                <%= link_to "Delete", article_path(@article), 
+                                    method: :delete, 
+                                    data: { confirm: "Are you sure you want to delete this article?" }, 
+                                    class: "btn-danger mdl-button mdl-js-button mdl-button--raised mdl-button--accent mdl-js-ripple-effect" %>
+            </div>
+            <div class="card-footer text-muted">
+                Create at <%= @article.created_at.strftime("%b %d, %Y") %>
+            </div>
+        </div>
+    </div>
+</div>
