--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,5 +1,12 @@
-<% flash.each do |name, msg| %>
-    <ul>
-        <li><%= msg %></li>
-    </ul>
-<% end %>
+<div class="row">
+    <div class="col-xs-8 offset-xs-2">
+        <% flash.each do |name, msg| %>
+            <div class='alert alert-<%= "#{name}" %> alert-dismissible fade in' role="alert" id="alert_message">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                <%= content_tag :div, msg, id: "flash_#{name}" if msg.is_a?(String) %>
+            </div>
+        <% end %>
+    </div>
+</div>
