--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -19,6 +19,10 @@ a {
     margin-top: 25px;
 }
 
+#index_page {
+    padding-top: 40px;
+}
+
 .btn-danger {
     background-color: #d9534f!important;
     color: #fff!important;
