--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,19 +1,39 @@
-<h2>List of articles</h2>
-
-<p><%= link_to "Create new article", new_article_path %></p>
-
-<table>
-    <tr>
-        <th>Article</th>
-        <th>Description</th>
-    </tr>
-    <% @articles.each do |article| %>
-    <tr>
-        <td><%= article.title %></td>
-        <td><%= article.description %></td>
-        <td><%= link_to "Show", article_path(article) %></td>
-        <td><%= link_to "Edit", edit_article_path(article) %></td>
-        <td><%= link_to "Delete", article_path(article), method: :delete, data: { confirm: "Are you sure?" } %></td>
-    </tr>
-    <% end %>
-</table>
+<div class="container" id="index_page">
+    <div class="row">
+        <div class="col-xs-12">
+            <h3 class="text-xs-center">List of Articles</h3>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-xs-12">
+            <div class="table-responsive">
+                <table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp m-x-auto">
+                    <thead>
+                        <tr>
+                        <th class="mdl-data-table__cell--non-numeric">Title</th>
+                        <th class="mdl-data-table__cell--non-numeric">Description</th>
+                        <th class="mdl-data-table__cell--non-numeric">Date</th>
+                        <th class="mdl-data-table__cell--non-numeric">Actions</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <% @articles.each do |article| %>
+                        <tr>
+                            <td class="mdl-data-table__cell--non-numeric"><%= article.title %></td>
+                            <td><%= article.description %></td>
+                            <td><%= article.created_at.strftime("%b %d, %Y") %></td>
+                            <td><%= link_to "Show", article_path(article), class: "mdl-button mdl-js-button mdl-button--raised mdl-button--colored mdl-js-ripple-effect"%>
+                                <%= link_to "Edit", edit_article_path(article), class: "mdl-button mdl-js-button mdl-button--raised mdl-button--colored mdl-js-ripple-effect" %>
+                                <%= link_to "Delete", article_path(article), 
+                                        method: :delete, 
+                                        data: { confirm: "Are you sure you want to delete this article?" }, 
+                                        class: "btn-danger mdl-button mdl-js-button mdl-button--raised mdl-button--accent mdl-js-ripple-effect" %>
+                            </td>
+                        </tr>
+                        <% end %>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
