--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -19,8 +19,8 @@
                     <tbody>
                         <% @articles.each do |article| %>
                         <tr>
-                            <td class="mdl-data-table__cell--non-numeric"><%= article.title %></td>
-                            <td><%= article.description %></td>
+                            <td class="mdl-data-table__cell--non-numeric"><%= truncate(article.title) %></td>
+                            <td><%= truncate(article.description) %></td>
                             <td><%= article.created_at.strftime("%b %d, %Y") %></td>
                             <td><%= link_to "Show", article_path(article), class: "mdl-button mdl-js-button mdl-button--raised mdl-button--colored mdl-js-ripple-effect"%>
                                 <%= link_to "Edit", edit_article_path(article), class: "mdl-button mdl-js-button mdl-button--raised mdl-button--colored mdl-js-ripple-effect" %>
