--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    
+
     <%= include_gon %>
   </head>
 
@@ -15,5 +15,7 @@
     <%= render "layouts/messages" %>
     <%= yield %>
     <%= render "layouts/footer" %>
+    <!-- Debug params if this app is running in development env. -->
+    <%= debug(params) if Rails.env.development? %>
   </body>
 </html>
