--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -4,36 +4,31 @@
             <h3 class="text-xs-center">List of Articles</h3>
         </div>
     </div>
-    <div class="row">
-        <div class="col-xs-12">
-            <div class="table-responsive">
-                <table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp m-x-auto">
-                    <thead>
-                        <tr>
-                        <th class="mdl-data-table__cell--non-numeric">Title</th>
-                        <th class="mdl-data-table__cell--non-numeric">Description</th>
-                        <th class="mdl-data-table__cell--non-numeric">Date</th>
-                        <th class="mdl-data-table__cell--non-numeric">Actions</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <% @articles.each do |article| %>
-                        <tr>
-                            <td class="mdl-data-table__cell--non-numeric"><%= truncate(article.title) %></td>
-                            <td><%= truncate(article.description) %></td>
-                            <td><%= article.created_at.strftime("%b %d, %Y") %></td>
-                            <td><%= link_to "Show", article_path(article), class: "mdl-button mdl-js-button mdl-button--raised mdl-button--colored mdl-js-ripple-effect"%>
-                                <%= link_to "Edit", edit_article_path(article), class: "mdl-button mdl-js-button mdl-button--raised mdl-button--colored mdl-js-ripple-effect" %>
-                                <%= link_to "Delete", article_path(article), 
-                                        method: :delete, 
-                                        data: { confirm: "Are you sure you want to delete this article?" }, 
-                                        class: "btn-danger mdl-button mdl-js-button mdl-button--raised mdl-button--accent mdl-js-ripple-effect" %>
-                            </td>
-                        </tr>
-                        <% end %>
-                    </tbody>
-                </table>
+    <% @articles.each do |article| %>
+        <div class="row row-grid">
+            <div class="col-xs-6 offset-xs-3">
+                <div class="demo-card-wide mdl-card mdl-shadow--2dp">
+                    <div class="mdl-card__title">
+                        <h2 class="mdl-card__title-text"><%= truncate(article.title) %></h2>
+                        <small>by: <strong><%= article.user.username %></strong></small>
+                    </div>
+                    <div class="mdl-card__supporting-text"><%= truncate(article.description, length: 120) %></div>
+                    <div class="mdl-card__actions mdl-card--border">
+                        <%= link_to "Show", article_path(article), class: "mdl-button mdl-js-button mdl-button--raised mdl-button--colored mdl-js-ripple-effect"%>
+                        <%= link_to "Edit", edit_article_path(article), class: "mdl-button mdl-js-button mdl-button--raised mdl-button--colored mdl-js-ripple-effect" %>
+                        <%= link_to "Delete", article_path(article),
+                                method: :delete,
+                                data: { confirm: "Are you sure you want to delete this article?" },
+                                class: "btn-danger mdl-button mdl-js-button mdl-button--raised mdl-button--accent mdl-js-ripple-effect" %>
+                    </div>
+                    <div class="mdl-card__menu">
+                        <button class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
+                        <i class="material-icons">share</i>
+                    </button>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
+    <% end %>
+
 </div>
