--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -28,8 +28,20 @@ a {
     color: #fff!important;
 }
 
+.mdl-card__title {
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+
+    & .mdl-card__title-text {
+        align-self: flex-start;
+    }
+}
+
 .mdl-card {
     min-height: 0;
+    max-width: 100%;
+    width: 100%;
 }
 
 .mdl-layout__drawer-button {
@@ -50,4 +62,30 @@ a {
 .page-title {
     width: 100%;
     text-align: center;
+}
+
+// Row and column vertical spacing.
+
+.row.row-grid [class*="col-"] + [class*="col-"] {
+    margin-top: 15px;
+}
+
+.row-grid + .row-grid {
+    margin-top: 15px;
+}
+
+@media (min-width: 1200px) {
+    .row.row-grid [class*="col-lg-"] + [class*="col-lg-"] {
+        margin-top: 0;
+    }
+}
+@media (min-width: 992px) {
+    .row.row-grid [class*="col-md-"] + [class*="col-md-"] {
+        margin-top: 0;
+    }
+}
+@media (min-width: 768px) {
+    .row.row-grid [class*="col-sm-"] + [class*="col-sm-"] {
+        margin-top: 0;
+    }
 }
