--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,5 +1,5 @@
-<div class="mdl-grid">
-    <div class="mdl-cell mdl-cell--4-col mdl-cell--4-offset">
+<div class="row row-grid">
+    <div class="col-xs-12 col-md-6 offset-md-3">
         <div class="page-title">
             <h3>Edit an article</h3>
         </div>
