--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,24 +1,24 @@
 <%= render "shared/errors", article: @article %>
-<div class="mdl-grid">
-    <div class="mdl-cell mdl-cell--4-col mdl-cell--4-offset">
+<div class="row row-grid">
+    <div class="col-xs-12 col-md-6 offset-md-3">
         <%= form_for @article, html: { class: "mdl-card mdl-shadow--2dp card-form" } do |f|%>
-            <div class="mdl-card__supporting-text">
-                <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                    <%= f.label :title, class: "mdl-textfield__label" %>
-                    <%= f.text_field :title, class: "mdl-textfield__input" %>
-                </div>
-                <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                    <%= f.label :description, class: "mdl-textfield__label" %>
-                    <%= f.text_area :description, class: "mdl-textfield__input" %>
-                </div>
+        <div class="mdl-card__supporting-text">
+            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                <%= f.label :title, class: "mdl-textfield__label" %>
+                <%= f.text_field :title, class: "mdl-textfield__input" %>
             </div>
-            <div class="mdl-card__actions mdl-card--border">
-                <%= f.submit "Create", class: "mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" %>
-                <%= link_to "Back to the list", articles_path, class: "mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" %>
-                <% if enable_back_button %>
-                    <%= link_to "Back to article", article_path(@article), class: "mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" %>
-                <% end %>
+            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                <%= f.label :description, class: "mdl-textfield__label" %>
+                <%= f.text_area :description, class: "mdl-textfield__input" %>
             </div>
+        </div>
+        <div class="mdl-card__actions mdl-card--border">
+            <%= f.submit "Create", class: "mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" %>
+            <%= link_to "Back to the list", articles_path, class: "mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" %>
+            <% if enable_back_button %>
+            <%= link_to "Back to article", article_path(@article), class: "mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" %>
+            <% end %>
+        </div>
         <% end %>
     </div>
 </div>
