Change edited page buttons styles

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -13,10 +13,10 @@
             </div>
         </div>
         <div class="mdl-card__actions mdl-card--border">
-            <%= f.submit "Create", class: "mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" %>
-            <%= link_to "Back to the list", articles_path, class: "mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" %>
+            <%= f.submit "Create", class: "mdl-button mdl-js-button mdl-button--raised mdl-button--colored mdl-js-ripple-effect" %>
+            <%= link_to "Back to the list", articles_path, class: "mdl-button mdl-js-button mdl-button--raised mdl-button--colored mdl-js-ripple-effect" %>
             <% if enable_back_button %>
-            <%= link_to "Back to article", article_path(@article), class: "mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" %>
+            <%= link_to "Back to article", article_path(@article), class: "mdl-button mdl-js-button mdl-button--raised mdl-button--accent mdl-js-ripple-effect" %>
             <% end %>
         </div>
         <% end %>
