--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -10,7 +10,8 @@
                 <div class="demo-card-wide mdl-card mdl-shadow--2dp">
                     <div class="mdl-card__title">
                         <h2 class="mdl-card__title-text"><%= truncate(article.title) %></h2>
-                        <small>by: <strong><%= article.user.username %></strong></small>
+                        <small>Created by: <strong><%= article.user.username %></strong></small>
+                        <small>Last updated: <%= time_ago_in_words(article.updated_at) %> ago</small>
                     </div>
                     <div class="mdl-card__supporting-text"><%= truncate(article.description, length: 120) %></div>
                     <div class="mdl-card__actions mdl-card--border">
