--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -8,30 +8,5 @@
         </div>
     </div>
 
-    <%= render "shared/errors", article: @user %>
-
-    <div class="row row-grid">
-        <div class="col-xs-12 col-md-6 offset-md-3">
-            <%= form_for @user, html: { class: "mdl-card mdl-shadow--2dp card-form" } do |f|%>
-                <div class="mdl-card__supporting-text">
-                    <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                        <%= f.label :username, class: "mdl-textfield__label" %>
-                        <%= f.text_field :username, class: "mdl-textfield__input" %>
-                    </div>
-                    <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                        <%= f.label :email, class: "mdl-textfield__label" %>
-                        <%= f.email_field :email, class: "mdl-textfield__input" %>
-                    </div>
-                    <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                        <%= f.label :password, class: "mdl-textfield__label" %>
-                        <%= f.password_field :password, class: "mdl-textfield__input" %>
-                    </div>
-                </div>
-                <div class="mdl-card__actions mdl-card--border">
-                    <%= f.submit "Sign Up", class: "mdl-button mdl-js-button mdl-button--raised mdl-button--colored mdl-js-ripple-effect" %>
-                    <%= link_to "Back to the list", articles_path, class: "mdl-button mdl-js-button mdl-button--raised mdl-button--colored mdl-js-ripple-effect" %>
-                </div>
-            <% end %>
-        </div>
-    </div>
+    <%= render 'form' %>
 </div>
