--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -4,7 +4,15 @@
             <h3 class="text-xs-center page-title">List of Articles</h3>
         </div>
     </div>
-
+    <div class="row">
+        <div class="col s12">
+            <%= will_paginate @articles, renderer: MaterializeRenderer %>
+        </div>
+    </div>
     <%= render "article", obj: @articles %>
-
+    <div class="row">
+        <div class="col s12">
+            <%= will_paginate @articles, renderer: MaterializeRenderer %>
+        </div>
+    </div>
 </div>
