Add paginate to articles in the user show view

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,7 +9,17 @@
             </div>
         </div>
         <div class="col-xs-12">
-            <%= render "articles/article", obj: @user.articles %>
+            <div class="col s12">
+                <%= will_paginate @user_articles, renderer: MaterializeRenderer %>
+            </div>
+        </div>
+        <div class="col-xs-12">
+            <%= render "articles/article", obj: @user_articles %>
+        </div>
+        <div class="col-xs-12">
+            <div class="col s12">
+                <%= will_paginate @user_articles, renderer: MaterializeRenderer %>
+            </div>
         </div>
     </div>
 </div>
