--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,6 +5,11 @@
         </div>
     </div>
 </div>
+<div class="row">
+    <div class="col s12">
+        <%= will_paginate @user, renderer: MaterializeRenderer %>
+    </div>
+</div>
 <div class="row row-grid">
     <% @users.each do |user| %>
     <div class="col-xs-12 col-md-4 offset-md-4">
@@ -17,4 +22,9 @@
         </div>
     </div>
     <% end %>
+</div>
+<div class="row">
+    <div class="col s12">
+        <%= will_paginate @user, renderer: MaterializeRenderer %>
+    </div>
 </div>
