--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -14,12 +14,14 @@
                 <p class="card-text"><%= @article.description %></p>
             </div>
             <div class="card-block">
-                <%= link_to "Edit article", edit_article_path, class: "mdl-button mdl-js-button mdl-button--raised mdl-button--colored mdl-js-ripple-effect" %>
+                <% if logged_in? && current_user == @article.user %>
+                    <%= link_to "Edit article", edit_article_path, class: "mdl-button mdl-js-button mdl-button--raised mdl-button--colored mdl-js-ripple-effect" %>
+                    <%= link_to "Delete", article_path(@article),
+                            method: :delete,
+                            data: { confirm: "Are you sure you want to delete this article?" },
+                            class: "btn-danger mdl-button mdl-js-button mdl-button--raised mdl-button--accent mdl-js-ripple-effect" %>
+                <% end %>
                 <%= link_to "Back to the list", articles_path, class: "mdl-button mdl-js-button mdl-button--raised mdl-button--accent mdl-js-ripple-effect" %>
-                <%= link_to "Delete", article_path(@article), 
-                                    method: :delete, 
-                                    data: { confirm: "Are you sure you want to delete this article?" }, 
-                                    class: "btn-danger mdl-button mdl-js-button mdl-button--raised mdl-button--accent mdl-js-ripple-effect" %>
             </div>
             <div class="card-footer text-muted">
                 Create at <%= @article.created_at.strftime("%b %d, %Y") %>
