Modify current_user helper

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -132,7 +132,7 @@ textarea.mdl-textfield__input {
     text-align: center!important;
 }
 
-.pagination a li.active {
+.pagination li a {
   color: #fff;
 }
 
