--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -18,6 +18,14 @@
             <div class="mdl-card__title mdl-card--expand">
                 <h4><strong><i>@<%= user.username %></i></strong></h4>
                 <small><stong><%= pluralize(user.articles.count, "article") if user.articles%></stong></small>
+                <div class="card-block">
+                    <% if logged_in? && current_user.admin? %>
+                        <%= link_to "Delete User", user_path(user),
+                                method: :delete,
+                                data: { confirm: "Are you sure you want to delete this article?" },
+                                class: "btn-danger mdl-button mdl-js-button mdl-button--raised mdl-button--accent mdl-js-ripple-effect" %>
+                    <% end %>
+                </div>
             </div>
         </div>
     </div>
