--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -11,7 +11,7 @@
 
                 <div class="mdl-card__actions mdl-card--border">
                     <%= link_to "Show", article_path(article), class: "mdl-button mdl-js-button mdl-button--raised mdl-button--colored mdl-js-ripple-effect"%>
-                    <% if logged_in? && current_user == article.user %>
+                    <% if logged_in? && (current_user == article.user || current_user.admin? ) %>
                         <%= link_to "Edit", edit_article_path(article), class: "mdl-button mdl-js-button mdl-button--raised mdl-button--colored mdl-js-ripple-effect" %>
                         <%= link_to "Delete", article_path(article),
                                 method: :delete,
